fixed image align

--- a/react/global.css
+++ b/react/global.css
@@ -63,6 +63,7 @@
 }
 
 .input-icon img {
+    padding-bottom: 2px;
     vertical-align: middle;
 }
 
